serd (0.21.0) unstable;

  * Remove dependence on fmax() to avoid portability issues
  * Fix warnings when building with ISO C++ compilers

 -- David Robillard <d@drobilla.net>  Fri, 21 Nov 2014 20:40:06 -0500

serd (0.20.0) stable;

  * Support new RDF 1.1 Turtle
  * Don't write xsd:decimal literals to Turtle bare if they would not be read
    back with the same type
  * Fix possible crash in serd_writer_end_anon() when writing invalid lists
  * Generate blank names like _:b1 and _:B2 not _:genid1 _:docid2
  * Correctly handle posix_memalign failure
  * Fix const-correctness violation for reader input string
  * Add -lm to pkg-config libs
  * Update to waf 1.7.14

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:02:54 -0400

serd (0.18.2) stable;

  * Fix crash when serd_node_new_decimal is called with infinity or NaN
  * Fix crash when resolving against non-standard base URIs
  * Fix bug that caused "a" abbreviation in non-predicate position
  * Disable timestamps in HTML documentation for reproducible build
  * Fix clashing symbol "error" in amalgamation build
  * Update to waf 1.7.8 and autowaf r90 (install docs to versioned directory)

 -- David Robillard <d@drobilla.net>  Sat, 22 Dec 2012 21:32:15 -0500

serd (0.18.0) stable;

  * Support digits at start of local names as per new Turtle grammar
  * Add incremental read interface suitable for reading from infinite streams
  * Add -e option to serdi to use incremental reading
  * Add error callback to reader and writer for custom error reporting
  * Add -q option to serdi to suppress all non-data output, e.g. errors
  * Reset indent when finishing a write
  * Report write size correctly when invalid UTF-8 is encountered and a
    replacement character is written
  * Strip down API documentation to a single clean page
  * Fix various hyper-strict warnings
  * Do not require a C++ compiler to build
  * Add option to build utilities as static binaries
  * Upgrade to waf 1.7.2
